Fixed layout issues with questions in QA section of Introduction

--- a/src/styles/components/_paper.scss
+++ b/src/styles/components/_paper.scss
@@ -42,6 +42,11 @@
   &--chrome {
     line-height: 0.9;
   }
+
+  &-ql {
+    margin-top: 0;
+    padding-top: 0.8rem;
+  }
 }
 
 .paper-contact-link-div {
